=======

4.0.3 (unreleased)
------------------

- When ``Browser.handleErrors`` is False, also add ``x-wsgiorg.throw_errors``
  to the environment. http://wsgi.org/wsgi/Specifications/throw_errors

- Prevent WebTest from always sending ``paste.throw_errors=True`` in the
  environment by setting it to ``None`` when ``Browser.handleErrors`` is
  ``True``.  This makes it easier to test error pages.

- More friendly error message from getControl() et al when you specify
  an index that is out of bounds.


4.0.2 (2011-05-25)
------------------

- Remove test dependency on zope.pagetemplate.


4.0.1 (2011-05-04)
------------------

- Added a hint in documentation how to use ``zope.testbrowser.wsgi.Browser``
  to test a Zope 2/Zope 3/Bluebream WSGI application.

4.0.0 (2011-03-14)
------------------

- LP #721252: AmbiguityError now shows all matching controls.

- Integrate with WebTest. ``zope.testbrowser.wsgi.Browser`` is a
  ``Browser`` implementation that uses ``webtest.TestApp`` to drive a WSGI
  application. This this replaces the wsgi_intercept support added in 3.11.

- Re-write the test application as a pure WSGI application using WebOb. Run the
  existing tests using the WebTest based Browser

- Move zope.app.testing based Browser into ``zope.app.testing`` (leaving
  backwards compatibility imports in-place). Released in ``zope.app.testing``
  3.9.0.


3.11.1 (2011-01-24)
-------------------

- Fixing brown bag release 3.11.0.


3.11.0 (2011-01-24)
-------------------

- Added `wsgi_intercept` support (came from ``zope.app.wsgi.testlayer``).


3.10.4 (2011-01-14)
-------------------

- Move the over-the-wire.txt doctest out of the TestBrowserLayer as it doesn't
  need or use it.

- Fix test compatibility with zope.app.testing 3.8.1.

3.10.3 (2010-10-15)
-------------------

- Fixed backwards compatibility with ``zope.app.wsgi.testlayer``.


3.10.2 (2010-10-15)
-------------------

- Fixed Python 2.7 compatibility in Browser.handleErrors.


3.10.1 (2010-09-21)